# chinesechess

./: Cargo.toml  LICENSE  README.md  onnx.py  rustfmt.toml
assets/model/: onnx.py
chessai/: README.md  go.mod  main.go  main_test.go
chessai/book/: book.go  move_sort.go  position.go  search.go  utils.go
chessai/engine/: const.go  engine.go  move.go  move_sort.go  search.go  sort.go  utils.go
examples/: book.rs
src/: event.rs  game.rs  main.rs  menu.rs  player.rs
src/book/: main.rs
src/chess/: ai_chess.rs  audio.rs  broad.rs  button.rs  chess.rs  event.rs  gameover.rs  info.rs  mod.rs  previou.rs  swith_player.rs
src/component/: mod.rs  piece.rs
src/engine/: book.rs  core.rs  mod.rs  pregen.rs  search.rs  sort.rs  state.rs  util.rs
src/public/: asset.rs  assets.rs  mod.rs  path.rs
src/resource/: asset.rs  mod.rs
src/setup/: animate.rs  font.rs  image.rs  mod.rs  piece.rs  sound.rs
src/status/: exited.rs  mod.rs  paused.rs  pending.rs  running.rs
src/system/: mod.rs
