[package]
name = "chinesebroad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
rand = "0.8"

[dependencies.bevy]
version = "0.11"
features = [
    "dynamic_linking",
    "mp3",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=y"]

[[bin]]
name ="book"
path ="src/book/main.rs"