[package]
name = "chinesebroad"
version = "0.1.0"
edition = "2021"
authors = ["atopx <3940422@qq.com>"]

[dependencies]
bincode = "1.3"
rand = "0.8"
chessai = "0.1.1"
winit = "0.28"
image = "0.24"

[dependencies.bevy]
version = "0.11"
features = [
    "dynamic_linking",
    "mp3",
     
]

[features]
dev = [
    "bevy/bevy_dylib",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=y"]
